# Snow-Day-Animation-Engine

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CanadianExperience.sln  CanadianExperience.vcxproj  CanadianExperience.vcxproj.filters  Harold Shoots Hoops.anim  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  cmake_install.cmake
CanadianExperienceLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BallFactory.cpp  BallFactory.h  CMakeLists.txt  CanadianExperienceLib.sln  CanadianExperienceLib.vcxproj  CanadianExperienceLib.vcxproj.filters  Drawable.cpp  Drawable.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  MachineDrawable.cpp  MachineDrawable.h  MachineDrawableFactory.cpp  MachineDrawableFactory.h  Picture.cpp  PictureFactory.cpp  Timeline.h  TimelineStart.cpp  TimelineStart.h  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp  ViewTimeline.h  cmake_install.cmake
MachineDemo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  MachineDemo.sln  (+4 more)
MachineLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Blower.cpp  Blower.h  CMakeLists.txt  Component.cpp  Component.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineLib.sln  MachineLib.vcxproj  MachineLib.vcxproj.filters  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MotionSink.cpp  MotionSink.h  MotionSource.cpp  MotionSource.h  Motor.cpp  Motor.h  Pulley.cpp  Pulley.h  Shape.cpp  Shape.h  Snow.cpp  Snow.h  cmake_install.cmake  pch.h
(+23 files in other folders)
